session/k8s/password-generator-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: password-generator-app-service
  labels:
    app: password-generator-app
spec:
  selector:
    app: password-generator-app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    name: metrics
  type: NodePort
