session/k8s/password-generator-app/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: password
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - password-generator.dossantosteam.com
    secretName: passswordcert
  rules:
  - host: "password-generator.dossantosteam.com"  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: password-generator-app-service
            port:
              number: 3000
